<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <TextView
        android:id="@+id/created_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/created_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailCheck"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailTextTitle"
        android:text="@string/emailTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/created_by" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/enterEmail"
        app:layout_constraintStart_toEndOf="@id/emailTextTitle"
        app:layout_constraintBottom_toTopOf="@id/created_by"
        app:layout_constraintEnd_toStartOf="@id/compromisedButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/compromisedButton"
        android:onClick="onCheckEmail"
        android:text="@string/compromisedButtonText"
        app:layout_constraintBottom_toTopOf="@id/created_by"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/generatePasswordTitleText"
        android:text="@string/generatePasswordTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enterEmail"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordDisplay"
        android:focusableInTouchMode="false"
        android:textIsSelectable="true"
        app:layout_constraintStart_toEndOf="@id/generatePasswordTitleText"
        app:layout_constraintEnd_toStartOf="@id/generatePasswordButtonText"
        app:layout_constraintBottom_toBottomOf="@id/generatePasswordTitleText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/generatePasswordButtonText"
        android:onClick="onGeneratePassword"
        android:text="@string/generatePasswordButtonText"
        app:layout_constraintBottom_toTopOf="@id/compromisedButton"
        app:layout_constraintEnd_toEndOf="@id/compromisedButton"/>

    <ListView
        android:id="@+id/da_list_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@+id/generatePasswordButtonText" />

</androidx.constraintlayout.widget.ConstraintLayout>